--- a/src/app/Components/blog-post/blog-post.component.html
+++ b/src/app/Components/blog-post/blog-post.component.html
@@ -21,7 +21,7 @@
   <hr>
 
   <!-- Preview Image -->
-  <img class="img-fluid rounded" src="http://placehold.it/900x400" alt="">
+  <img class="img-fluid rounded" src="/assets/test.jpg" alt="">
 
   <hr>
 
