--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-5 bg-light fixed-bottom">
+<footer class="py-5 bg-light">
   <div class="container">
     <p class="m-0 text-center text-black">Copyright &copy; Interest Blog 2020</p>
   </div>
