--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="signup-form" style="padding-top: 100px;">
+<div class="signup-form" style="padding-top: 100px; padding-bottom: 100px">
     <form class="btn-lg" action="" method="post">
 		<h2>Register</h2>
 		<p class="hint-text">Create your account. It's free and only takes a minute.</p>
