--- a/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
+++ b/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
@@ -11,7 +11,7 @@
         <a class="nav-link" href="#">Write</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Explore</a>
+        <a class="nav-link" href="explore">Explore</a>
       </li>
     </ul>
     <ul class="navbar-nav mr-right">
