--- a/blog-frontend/src/styles.css
+++ b/blog-frontend/src/styles.css
@@ -115,3 +115,16 @@ body {
 }  
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.resizeImage {
+    zoom: 2;
+
+    display: block;
+    margin: auto;
+
+    height: auto;
+    max-height: 100%;
+
+    width: auto;
+    max-width: 100%;
+}
