--- a/blog-frontend/src/app/Components/posts_list/PostList.html
+++ b/blog-frontend/src/app/Components/posts_list/PostList.html
@@ -4,7 +4,8 @@
         <div *ngFor = "let item of postList | async">
           <div class="card bg-dark text-white" style="margin:25px 25px 25px 25px">
             <img class="img-fluid resizeImage" [src]="item.imageLink">
-            <div class="card-img-overlay">
+            <h5 class="card-title bg-text-autor">Nume Autor</h5>
+            <div class="bg-text">
               <h5 class="card-title">{{item.title}}</h5>
               <p class="card-text">{{item.description}}</p>
               <p class="card-text">{{item.interest}}</p>
