--- a/blog-frontend/src/styles.css
+++ b/blog-frontend/src/styles.css
@@ -127,4 +127,35 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
     width: auto;
     max-width: 100%;
+
+    filter: blur(4px);
+    -webkit-filter: blur(4px);
 }
+
+.bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .rounded-circle {
+    border-radius: 50%;
+    min-width: 100%;
+  }
+
+.bg-text-autor {
+    color: white;
+    font-weight: bold;
+    text-align: center;
+  }
+
