--- a/blog-frontend/src/app/Components/blog-post/blog-post.component.html
+++ b/blog-frontend/src/app/Components/blog-post/blog-post.component.html
@@ -1,6 +1,6 @@
 <div class="post-form">
   <!-- Title -->
-  <h1 class="mt-4">Post Title</h1>
+  <h1 class="mt-4">{{post?.title}}</h1>
 
   <!-- Author -->
   <p class="lead">
@@ -16,42 +16,18 @@
   <hr>
 
   <!-- Post interests -->
-  <p>Related Interests: <a href="#">interest1</a>, <a href="#">interest2</a>, <a href="#">interest3</a></p>
+  <p>Related Interest: <a href="#">{{post?.interest}}</a></p>
 
   <hr>
 
   <!-- Preview Image -->
-  <img class="img-fluid rounded" src="/assets/test.jpg" alt="">
+  <img class="img-fluid rounded" src={{post?.imageLink}} alt="">
 
   <hr>
 
   <!-- Post Content -->
-  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam
-    sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?
-  </p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum
-    rerum
-    obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum
-    consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-  <blockquote class="blockquote">
-    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-    <footer class="blockquote-footer">Someone famous in
-      <cite title="Source Title">Source Title</cite>
-    </footer>
-  </blockquote>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam
-    sunt
-    tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur
-    ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus,
-    est!
-  </p>
+  <p class="lead">{{post?.description}}</p>
+  <p>{{post?.content}}</p>
 
   <hr>
 
@@ -70,7 +46,6 @@
 
   <!-- Single Comment -->
   <div class="media mb-4">
-    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
     <div class="media-body">
       <h5 class="mt-0">Commenter Name</h5>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -82,7 +57,6 @@
 
   <!-- Comment with nested comments -->
   <div class="media mb-4">
-    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
     <div class="media-body">
       <h5 class="mt-0">Commenter Name</h5>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -91,7 +65,6 @@
       congue felis in faucibus.
 
       <div class="media mt-4">
-        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
         <div class="media-body">
           <h5 class="mt-0">Commenter Name</h5>
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -101,7 +74,6 @@
       </div>
 
       <div class="media mt-4">
-        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
         <div class="media-body">
           <h5 class="mt-0">Commenter Name</h5>
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -109,7 +81,6 @@
           lacinia congue felis in faucibus.
         </div>
       </div>
-
     </div>
   </div>
 </div>
