--- a/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
+++ b/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="write">Write</a>
+        <a class="nav-link" href="post">Write</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="explore">Explore</a>
