added new backend service for requesting blogs by interest and displayed them as a feed when a user clicks on an interest using the ItemList component in angular

--- a/blog-frontend/src/app/Components/blog-post/blog-post.component.html
+++ b/blog-frontend/src/app/Components/blog-post/blog-post.component.html
@@ -16,7 +16,7 @@
   <hr>
 
   <!-- Post interests -->
-  <p>Related Interest: <a href="#">{{post?.interest}}</a></p>
+  <p>Related Interest: <a style="color: aquamarine;" href="/explore/{{post?.interest}}">{{post?.interest}}</a></p>
 
   <hr>
 
