fixed date formatting, added date field to front end post item interface and edited post cards to include date

--- a/blog-frontend/src/app/Components/blog-post/blog-post.component.html
+++ b/blog-frontend/src/app/Components/blog-post/blog-post.component.html
@@ -11,12 +11,12 @@
   <hr>
 
   <!-- Date/Time -->
-  <p>Posted on November 18, 2020 at 12:00 PM</p>
+  <p>{{post?.date}}</p>
 
   <hr>
 
   <!-- Post interests -->
-  <p>Related Interest: <a style="color: aquamarine;" href="/explore/{{post?.interest}}">{{post?.interest}}</a></p>
+  <p>Related Interest: <a style="color:darkcyan;" href="/explore/{{post?.interest}}">{{post?.interest}}</a></p>
 
   <hr>
 
