--- a/blog-frontend/src/app/Components/posts_list/PostList.html
+++ b/blog-frontend/src/app/Components/posts_list/PostList.html
@@ -9,6 +9,7 @@
             <div class="bg-text">
               <h5 class="card-title">{{item.title}}</h5>
               <p class="card-text">{{item.description}}</p>
+              <p class="card-text">{{item.date}}</p>
               <p class= "card-text"><a style="color: aquamarine;" href="/explore/{{item.interest}}">{{item.interest}}</a></p>
             </div>
           </div>
