implemented search functionallity using the getPostsByInterests backend service function

--- a/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
+++ b/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
@@ -37,8 +37,8 @@
         </div>
       </li>
     </ul>
-    <form (ngSubmit)="onSubmit()"" class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search interests..." aria-label="Search">
+    <form id="searchForm" (ngSubmit)="onSubmit()" class="form-inline my-2 my-lg-0">
+      <input id="search" class="form-control mr-sm-2" type="text" placeholder="Search interests..." aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
