fixed frontend footer

--- a/blog-frontend/src/app/Components/interests-widget/interests-widget.component.html
+++ b/blog-frontend/src/app/Components/interests-widget/interests-widget.component.html
@@ -5,20 +5,20 @@
             <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a href="#">Web Design</a>
+                        <a style="color:darkcyan;" href="#">Web Design</a>
                     </li>
                     <li>
-                        <a href="#">HTML</a>
+                        <a style="color:darkcyan;" href="#">HTML</a>
                     </li>
                 </ul>
             </div>
             <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                     <li>
-                        <a href="#">TypeScript</a>
+                        <a style="color:darkcyan;" href="#">TypeScript</a>
                     </li>
                     <li>
-                        <a href="#">CSS</a>
+                        <a style="color:darkcyan;" href="#">CSS</a>
                     </li>
                 </ul>
             </div>
