--- a/blog-frontend/src/app/Components/register/register.component.html
+++ b/blog-frontend/src/app/Components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="signup-form" style="padding-top: 50px; padding-bottom: 25px">
+<div class="signup-form" style="padding-top: 50px;">
     <form class="btn-lg" action="" method="post">
 		<h2>Register</h2>
 		<p class="hint-text">Create your account. It's free and only takes a minute.</p>
