--- a/blog-frontend/src/app/Components/write-form/write-form.component.html
+++ b/blog-frontend/src/app/Components/write-form/write-form.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="padding-top: 50px; padding-bottom: 50px">
+<div class="container" style="padding-top: 50px;">
     <div class="row">
 
         <div class="col-md-8 col-md-offset-2">
