--- a/blog-frontend/src/styles.css
+++ b/blog-frontend/src/styles.css
@@ -8,6 +8,7 @@
     }
 }
 body {
+    min-height:100vh;
     padding-top: 54px;
     color: #fff;
     background: #F7F7F7;
@@ -168,3 +169,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     -webkit-transform: scale(1.5); /* Safari 3-8 */
     transform: scale(1.05); 
   }
+
+.wrapper {
+    min-height:100vh;
+ }
+ 
+ .flex-fill {
+    flex:1 1 auto;
+ }
