--- a/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
+++ b/blog-frontend/src/app/Components/top-navbar/top-navbar.component.html
@@ -52,9 +52,7 @@
               <p #loginMsg id="loginMsg" style="color: red;"></p>
             </div>
 
-            <div style="width: 250px; margin-bottom: 15px;">
-              <a href="#">Forgot password?</a>
-            </div>
+            <div style="width: 250px;"></div>
 
             <div class="form-group" style="margin-bottom: 15px;">
               <button type="submit" class="w-100 btn btn-lg btn-success my-2 my-sm-0">
